# class-6-7

./: multi-agent-definitiion.md  pyproject.toml
app/agents/: requirements_graph.py  travel_system_agents.py  travel_system_graph.py
app/agents/prompts/: travel_system.py
app/agents/response_models/: __init__.py  booker_agent.py  planner_agent.py  requirements_agent.py
app/agents/tools/: __init__.py  booker_tools.py
app/core/: llm.py
